# construqt

./: .gitignore  .travis.yml  Gemfile  LICENSE  LICENSE.txt  README.md  construqt.gemspec
construct/: addresses.rb  bgps.rb  cables.rb  construct.rb  firewall.rb  firewalls.rb  hostid.rb  hosts.rb  interfaces.rb  ipsecs.rb  networks.rb  regions.rb  resource.rb  services.rb  tags.rb  templates.rb  users.rb  util.rb  vlans.rb
construct/flavour/: delegates.rb  flavour.rb
construct/tests/: .test_hosts.rb.swp  test_addresses.rb  test_bgps.rb  test_hostid.rb  test_hosts.rb  test_utils.rb
core/: LICENSE.txt  construqt-core.gemspec
core/lib/: construqt.rb
documentation/beyond_the_network/: index.html  revealition
examples/: aiccu.rb  always-connected.rb  always-online.rb  bdog.rb  clavator.rb  construqt-examples.gemspec  construqt.rb  crashtestdummy.rb  fanout-connect.rb  fanout-de.rb  fanout-us.rb  firewall.rb  hgw.rb  mam-wl-rt.rb  mikrotik-pptp  ooble.rb  postfix.rb  scable.rb  scott.rb  thieso.rb
flavours/ciscian/: construqt-flavour-ciscian.gemspec
flavours/gojs/: construqt-flavour-gojs.gemspec
flavours/mikrotik/: construqt-flavour-mikrotik.gemspec
flavours/plantuml/: construqt-flavour-plantuml.gemspec
flavours/unknown/: construqt-flavour-unknown.gemspec
flavours/vis/: construqt-flavour-vis.gemspec
lib/: construqt.rb
lib/construqt/: addresses.rb  bgps.rb  cables.rb  firewalls.rb  hostid.rb  (+17 more)
relaytor/: CMakeLists.txt  Makefile  relaytor.cpp  tester.rb
routerchat/: example.go  test.go
switch-chatter/: README.md  pom.xml  sc
switch-delta/: configmodel.rb  flavour.rb  flavour_dlink_dgs15xx.rb  flavour_hp-2510g.rb  flavour_hp-procurve.rb  parser.rb  renderer.rb  switch-delta.rb  test-parser.rb
woko/: Cargo.toml  build.rs  updater.rb
woko/src/: apt.rs  lib.rs  main.rs  serde_types.in.rs
woko/tests/: apt.out  test_apt.rs
(+802 files in other folders)
