[package]
name = "woko"
version = "0.1.0"
authors = ["Meno Abels <meno.abels@adviser.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
iron = "0.4.0"
time = "0.1.35"
regex = "0.1.69"
log = "0.3.6"
bodyparser = "0.3.0"
persistent = "0.1.0"
#rustc-serialize = "0.3.19"
serde = "0.8"
serde_json = "0.8"
#serde_derive = "0.8.11"
#serde_macros = "*"

