[package]
name = "woko"
version = "0.1.0"
authors = ["Meno Abels <meno.abels@adviser.com>"]
build = "build.rs"

[build-dependencies]
syntex_syntax = "0.44.0"
serde_codegen = "0.8"
#libc = "0.2.16"
#nix = "0.7.0"

[dependencies]
#nix = "0.7.0"
#libc = "0.2.16"
#iron = "0.4.0"
#hyper = { git = "https://github.com/mabels/hyper.git" }
mime = "0.3.5"
#hyper-tls = "0.1.2"
env_logger = "0.5.3"
log = "0.4.1"
rustls = "0.12"
hyper = "0.11"
futures = "0.1.18"
futures-cpupool = "0.1.8"
tokio-core = "0.1.12"
tokio-rustls = { version = "0.5", features = [ "tokio-proto" ] }
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
#time = "0.1.35"
regex = "0.1.77"
#log = "0.3.6"
#bodyparser = "0.3.0"
#persistent = "0.1.0"
#rustc-serialize = "0.3.19"
#syntex_syntax = "0.44.0"
serde = "0.8"
serde_json = "0.8"
#serde_derive = "0.8.11"
#serde_macros = "*"

